--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.MuiSnackbarContent-message {padding: 0px !important; min-width: 1000px;}
