--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,5 @@ code {
     monospace;
 }
 .MuiSnackbarContent-message {padding: 0px !important; min-width: 1000px;}
+.MuiSnackbar-anchorOriginBottomLeft{bottom: 0 !important; left: 0 !important; width: 100%;}
+.MuiPaper-root{width: 100%; border-radius: 0 !important}
